--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
+<!DOCTYPE html>
 <html>
-  <head></head>
-  <body><var config = {
+<head>
+  <meta charset="utf-8">
+  <title>K-POP MV聖地巡礼</title>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet">
+  <style>
+    body { margin: 0; padding: 0; }
+    #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+  </style>
+</head>
+<body>
+
+<div id="map"></div>
+
+<script>
+ var config = {
     style: 'mapbox://styles/wataruyoshida/clk3ipjah004b01ra3tse6xxf/draft',
     accessToken: 'pk.eyJ1Ijoid2F0YXJ1eW9zaGlkYSIsImEiOiJjbDFtd3d6YjgwM3FkM2pxN2R6cnZ3a2FqIn0.6A1hUsWM-2kBi7_mqTvJMg',
     showMarkers: true,
@@ -321,5 +336,8 @@
         }
     ]
 };
-></body>
+
+</script>
+
+</body>
 </html>
