--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html><head>
+<html>
+<head>
     <meta charset="utf-8">
     <title>Mapbox Storytelling</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -487,4 +487,5 @@ window.addEventListener('resize', scroller.resize);
 
 
 
-</body></html>
+</body>
+</html>
